# eimdall-ros2-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: bridge.yaml
docs/: dev-guide.md
eimdall_ros2_bridge/: __init__.py  anomaly_bridge.py  bridge_node.py  edge_client.py  health_bridge.py  ingest_bridge.py
hardware/esp32_mpu6050/: sketch.ino
launch/: bridge.launch.py  eimdall_bridge.launch.py
monitoring/: grafana-dashboard.json  otel-collector-config.yaml
msg/: EimdallAnomaly.msg  EimdallHealth.msg  EimdallSensorStatus.msg
scripts/: anomaly_bridge  health_bridge  ingest_bridge
test/: conftest.py  test_anomaly_bridge.py  test_health_bridge.py
