<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eimdall_ros2_bridge</name>
  <version>0.9.2</version>
  <description>
    ROS 2 bridge for the Eimdall Edge runtime.
    Subscribes to standard ROS 2 topics and forwards sensor data to the
    Eimdall Edge local service (127.0.0.1:8787).
  </description>

  <maintainer email="contact@data-agility.fr">DATA AGILITY</maintainer>
  <license>MIT</license>
  <url type="website">https://robovis.io/docs</url>
  <url type="repository">https://github.com/YvesData/eimdall-ros2-bridge</url>
  <url type="bugtracker">https://github.com/YvesData/eimdall-ros2-bridge/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
